# Lunabotics-2024

./: .gitignore  README.md  install_dependencies.sh
autonomous/localization_pkg/: CMakeLists.txt  package.xml
autonomous/localization_pkg/config/: ekf_.yaml
autonomous/localization_pkg/include/localization_pkg/: PointCloudTo2D.h  calculate_goal.h
autonomous/localization_pkg/src/: imu_wheel_odom_publisher.cpp  odom_transform.cpp  pointcloud2d_publisher.cpp  sync_camera.cpp  wheel_odom_publisher.cpp
lunabot/autonomous/: CMakeLists.txt  package.xml
lunabot/autonomous/autonomous_msgs/: CMakeLists.txt  package.xml
lunabot/autonomous/autonomous_msgs/msg/: Encoder.msg
lunabot/autonomous/autonomous_pkg/: CMakeLists.txt  package.xml
lunabot/autonomous/autonomous_pkg/include/autonomous_pkg/: AprilTag.h  CalculateGoal.h  ParticleFilter.h
lunabot/autonomous/autonomous_pkg/scripts/: navigate_through_poses.py
lunabot/autonomous/autonomous_pkg/src/camera/: camera_calibration.cpp  camera_synchronization.cpp
lunabot/autonomous/autonomous_pkg/src/filter/: particle_filter.cpp
lunabot/autonomous/autonomous_pkg/src/motor/: motor_controller.cpp  motor_test.cpp
lunabot/autonomous/autonomous_pkg/src/navigation/: navigator_client.cpp
lunabot/autonomous/autonomous_pkg/src/odometry/: odometry_transform.cpp  wheel_imu_odometry.cpp  wheel_odometry.cpp
lunabot/autonomous/autonomous_pkg/src/utilities/: imu_rotator.cpp  imu_rotator_d455.cpp  laserscan_to_pointcloud_merger.cpp  map_merger.cpp  pointcloud_to_laserscan.cpp
lunabot/autonomous/include/autonomous/: ParticleFilter.h
lunabot/autonomous/localization_pkg/: CMakeLists.txt  package.xml
lunabot/autonomous/localization_pkg/config/: ekf_.yaml
lunabot/autonomous/localization_pkg/include/localization_pkg/: AprilTag.h  ParticleFilter.h
lunabot/autonomous/localization_pkg/src/: camera_calibration.cpp  imu_rotator.cpp  imu_wheel_odom_publisher.cpp  initial_pose_publisher.cpp  kinect_publisher.cpp  map_merger.cpp  odom_transform.cpp  pointcloud_to_laserscan.cpp  pose_publisher.cpp  state_estimation.cpp  sync_camera.cpp  wheel_odom_publisher.cpp
lunabot/autonomous/navigation_pkg/: CMakeLists.txt  package.xml
lunabot/autonomous/navigation_pkg/include/navigation_pkg/: DifferentialDrive.hpp
lunabot/autonomous/navigation_pkg/src/: motor_controller.cpp  navigator.cpp
lunabot/autonomous/robot_description/: CMakeLists.txt  package.xml
lunabot/autonomous/robot_description/meshes/: wheel_link.STL
lunabot/autonomous/robot_description/urdf/: test_bot.xacro
lunabot/autonomous/src/: hardware_monitor.cpp  imu_rotator.cpp  motor_test.cpp  navigator_client.cpp  odometry_transform.cpp  particle_filter.cpp  robot_controller.cpp
lunabot/autonomous/src/filter/: particle_filter.cpp
lunabot/autonomous/src/motor/: motor_controller.cpp  motor_test.cpp
lunabot/autonomous/src/navigation/: navigator_client.cpp
lunabot/autonomous/src/utilities/: imu_rotator.cpp  imu_rotator_t265.cpp  odometry_transform.cpp
lunabot/autonomous/test_bot_description/: CMakeLists.txt  package.xml
lunabot/autonomous/test_bot_description/urdf/: test_bot.xacro
lunabot_autonomous/: CMakeLists.txt
lunabot_autonomous/include/ctre/phoenix/: PhoenixVersion.h  StatusCodes.h
lunabot_autonomous/include/ctre/phoenix6/: CANBus.hpp  CANcoder.hpp  Orchestra.hpp  Pigeon2.hpp  SignalLogger.hpp  StatusSignal.hpp  TalonFX.hpp  Timestamp.hpp
lunabot_autonomous/include/ctre/phoenix6/configs/: Configs.hpp  Configurator.hpp
lunabot_autonomous/include/ctre/phoenix6/controls/: CoastOut.hpp  ControlRequest.hpp  DifferentialDutyCycle.hpp  DifferentialFollower.hpp  DifferentialMotionMagicDutyCycle.hpp  DifferentialMotionMagicVoltage.hpp  DifferentialPositionDutyCycle.hpp  DifferentialPositionVoltage.hpp  DifferentialStrictFollower.hpp  DifferentialVelocityDutyCycle.hpp  DifferentialVelocityVoltage.hpp  DifferentialVoltage.hpp  DutyCycleOut.hpp  DynamicMotionMagicDutyCycle.hpp  DynamicMotionMagicTorqueCurrentFOC.hpp  DynamicMotionMagicVoltage.hpp  Follower.hpp  MotionMagicDutyCycle.hpp  MotionMagicExpoDutyCycle.hpp  MotionMagicExpoTorqueCurrentFOC.hpp  MotionMagicExpoVoltage.hpp  MotionMagicTorqueCurrentFOC.hpp  MotionMagicVelocityDutyCycle.hpp  MotionMagicVelocityTorqueCurrentFOC.hpp  MotionMagicVelocityVoltage.hpp  (+13 more)
lunabot_autonomous/msg/: Control.msg  MotorOutput.msg
lunabot_autonomous/src/: .robot_controller.cpp.swo  .robot_controller.cpp.swp  hardware_monitor.cpp  motor_test.cpp  navigator_client.cpp  robot_controller.cpp
lunabot_autonomous/src/control/: kraken_controller.cpp  robot_controller.cpp  talon_srx_controller.cpp
lunabot_autonomous/src/system/: hardware_monitor.cpp
manual_control_pkg/: CMakeLists.txt  package.xml
manual_control_pkg/include/manual_control_cpp_pkg/: DifferentialDrive.hpp
src/autonomous_pkg/: CMakeLists.txt  package.xml
src/autonomous_pkg/src/: pointCloudPipeline.cpp  syncCamera.cpp
src/bot_pkg/: CMakeLists.txt
src/bot_pkg/launch/: motorLaunch_2Wheel.py
src/localization_pkg/: CMakeLists.txt  package.xml
src/localization_pkg/config/: apriltagsConfig.yaml  ekf.yaml  ekf_.yaml
src/localization_pkg/include/localization_pkg/: AprilTag.h  ParticleFilter.h  PointCloudTo2D.h
src/localization_pkg/src/: AprilTagDetection.cpp  CameraCalibration.cpp  PointCloud2DPublisher.cpp  PointCloudPipeline.cpp  Publisher_node.py  StateEstimation.cpp  SyncCamera.cpp  apriltagDetection.cpp  filtered_odom_transform.cpp  imu_wheel_odom_publisher.cpp  map_transform.cpp  odom_transform.cpp  publisher_node.cpp  set_initial_pose.cpp  test_goal_publisher.cpp  wheel_odom_publisher.cpp  wheel_velocity_publisher.cpp
src/manual_control_pkg/: CMakeLists.txt  package.xml
src/manual_control_pkg/include/manual_control_pkg/: DifferentialDrive.hpp
src/manual_control_pkg/src/: manual_control.cpp
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/include/navigation_pkg/: DifferentialDrive.hpp
src/navigation_pkg/msg/: Encoder.msg
src/navigation_pkg/src/: Navigator.cpp  motor_controller.cpp  motor_pid.cpp  motor_test.cpp
(+176 files in other folders)
