<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>autonomous_pkg</name>
  <version>1.0.0</version>
  <description>This package contains autonomous code.</description>
  <maintainer email="grayson.n.arendt5@gmail.com">Grayson Arendt</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>image_transport</depend>
  <depend>depth_image_proc</depend>
  <depend>camera_info_manager</depend>
  <depend>pcl_conversions</depend>
  <depend>ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <depend>autonomous_msgs</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
  <depend>Eigen3</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
